test/parsing/errors/invalidNumericLiteral.compopts
--detailed-errors # invalidNumericLiteral-detailed.good
--no-detailed-errors # invalidNumericLiteral-brief.good
